Fixed overlap on Case Study page

--- a/css/style.less
+++ b/css/style.less
@@ -157,14 +157,14 @@ main {
         }
         p {
             font-size: .75em;
-            padding: 1.75em 0 0 2em;
+            padding: 1.75em 0 1em 2em;
             width: 60%;
             font-family: 'Inter', sans-serif;
         }
         img {
             position: absolute;
             top: 117px;
-            right: -280px;
+            right: -320px;
             transform: rotate(5deg);
             scale: 1.25;
             box-shadow: 0px 10px 10px rgba(0, 0, 0, .1);
@@ -180,7 +180,7 @@ main {
             padding: 1em 1.5em;
             position: absolute;
             left: 73px;
-            top: 460px;
+            //top: 408px;
             h5 {
                 text-transform: uppercase;
                 font-family: 'Inter', sans-serif;
